--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap';
+a {
+  color: black !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.brand-logo,
+h2 {
+  font-family: "Grand Hotel", cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mycard {
+  margin-top: 30px;
+}
+.auth-card {
+  padding: 20px;
+  text-align: "center";
+  max-width: 400px;
+  margin: 10px auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.collection-item {
+  width: 100%;
+}
+.input-field input[type="text"]:focus {
+  border-bottom: 1px solid blue;
+  box-shadow: 0 1px 0 0 #000;
+}
+.input-field input[type="password"]:focus {
+  border-bottom: 1px solid blue;
+  box-shadow: 0 1px 0 0 #000;
 }
 
-.App-link {
-  color: #61dafb;
+.home-card > h5 {
+  padding: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home {
+  max-width: 500px;
+  margin-left: 400px;
+}
+.home-card {
+  max-width: 500px;
+  margin-top: 30px;
+  max-height: max-content;
 }
